--- a/.github/workflows/source.yml
+++ b/.github/workflows/source.yml
@@ -52,18 +52,19 @@ jobs:
 
   pylint:
     runs-on: ubuntu-latest
-    container:
-      image: vogelingmar/treespec
-      volumes:
-        - ${{ github.workspace }}:/github/workspace
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.9", "3.10"]
     steps:
-      - name: Checkout out repository
-        uses: actions/checkout@v4
-      - name: Analysing the code with pylint
-        shell: bash
-        run: |
-          source /workspace/venv/bin/activate
-          cd /github/workspace/
-          python -m pip install --upgrade .'[dev, docs]'
-          pylint src --rcfile=.rcfile
-          pylint test --rcfile=.rcfile --disable duplicate-code --disable missing-function-docstring --disable too-many-positional-arguments
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pylint
+    - name: Analysing the code with pylint
+      run: |
+        pylint $(git ls-files '*.py')
