--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "opencv-python",
     "ffmpeg-python",
     "detectron2 @ git+https://github.com/facebookresearch/detectron2.git"
+    "hydra"
+    "dataclasses"
 ]
 [project.optional-dependencies]
 dev = [
