--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,9 @@ dependencies = [
     "pytorch-lightning",
     "opencv-python",
     "ffmpeg-python",
-    "detectron2 @ git+https://github.com/facebookresearch/detectron2.git"
-    "hydra"
-    "dataclasses"
+    "detectron2 @ git+https://github.com/facebookresearch/detectron2.git",
+    "hydra",
+    "dataclasses",
 ]
 [project.optional-dependencies]
 dev = [
