--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,12 @@ description = "A project for tree detection and analysis using Detectron2 and Py
 authors = [
     { name = "Ingmar Vogel", email = "ingmar.vogel@student.hpi.uni-potsdam.de" }
 ]
-license = { text = "MIT" }
+license = { file = "LICENSE }
+classifiers = [
+    "Programming Language :: Python",
+    "Programming Language :: Pathon :: 3",
+]
+keywords = ["images", "deep learning"]
 
 dependencies = [
     "torch",
@@ -23,15 +28,10 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "black",
-    "hypothesis",
     "mypy",
-    "pandas-stubs",
-    "pre-commit",
     "pylint",
     "pytest",
     "pytest-cov",
-    "pytest-httpserver",
-    "types-tqdm",
 ]
 docs = [
     "sphinx",
@@ -46,9 +46,16 @@ docs = [
     "sphinx_mdinclude",
 ]
 
+[project.urls]
+Homepage = "https://github.com/vogelingmar/treespec"
 
-[tool.setuptools]
-packages = ["src"]
+[tool.bumpver]
+current_version = "1.0.0"
+version_pattern = "MAJOR.MINOR.PATCH"
+commit_message  = "Bump version {old_version} -> {new_version}"
+commit          = true
+tag             = true
+push            = false
 
-[tool.setuptools.package-data]
-"src" = ["*.py"]
+[tool.bumpver.file_patterns]
+"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
