--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "A project for tree detection and analysis using Detectron2 and Py
 authors = [
     { name = "Ingmar Vogel", email = "ingmar.vogel@student.hpi.uni-potsdam.de" }
 ]
-license = { file = "LICENSE }
+license = { file = "LICENSE" }
 classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Pathon :: 3",
